webui-delegate/templates/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: webui-rollout
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: webui-rollout
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: webui-rollout
    spec:
      containers:
      - name: webui-rollout
        image: dotronglong/faker:3.0.0
        volumeMounts:
        - name: mocks-volume
          mountPath: /app/mocks
        ports:
        - name: http
          containerPort: 3030
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
      volumes:
      - name: mocks-volume
        configMap:
          name: user-mocks-configmap
  strategy:
#    canary:
#      # analysis will be performed in background, while rollout is progressing through its steps
#      analysis:
#        startingStep: 1   # index of step list, of when to start this analysis
#        templates:
#        - templateName: webui-success-rate
#        args:             # arguments allow AnalysisTemplates to be re-used
#        - name: service
#          value: webui-rollout
#        - name: namespace
#          valueFrom:
#            fieldRef:
#              fieldPath: metadata.namespace
    canary:
      maxSurge: 30%
      maxUnavailable: 0
      trafficRouting:
        istio:
          virtualService:
            name: webui-rollout-delegate
            routes:
            - experimental
          destinationRule:
            name: webui-destrule    # required
            canarySubsetName: canary  # required
            stableSubsetName: stable  # required
      steps:
        - setCanaryScale:
            matchTrafficWeight: true
        - setWeight: 50
        - pause:
            duration: 1m
        - setWeight: 75
        - pause:
            duration: 1m

---

apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: webui-experimental-rollout
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: webui-experimental-rollout
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: webui-experimental-rollout
    spec:
      containers:
        - name: webui-experimental-rollout
          image: dotronglong/faker:3.0.0
          volumeMounts:
          - name: mocks-volume
            mountPath: /app/mocks
          ports:
            - name: http
              containerPort: 3030
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
      volumes:
      - name: mocks-volume
        configMap:
          name: user-mocks-configmap-experiment
  strategy:
    #    canary:
    #      # analysis will be performed in background, while rollout is progressing through its steps
    #      analysis:
    #        startingStep: 1   # index of step list, of when to start this analysis
    #        templates:
    #        - templateName: webui-success-rate
    #        args:             # arguments allow AnalysisTemplates to be re-used
    #        - name: service
    #          value: webui-rollout
    #        - name: namespace
    #          valueFrom:
    #            fieldRef:
    #              fieldPath: metadata.namespace
    canary:
      maxSurge: 30%
      maxUnavailable: 0
      trafficRouting:
        istio:
          virtualService:
            name: webui-rollout-delegate
            routes:
              - primary
          destinationRule:
            name: webui-destrule-experiment    # required
            canarySubsetName: canary  # required
            stableSubsetName: stable  # required
      steps:
        - setCanaryScale:
            matchTrafficWeight: true
        - setWeight: 50
        - pause:
            duration: 1m
        - setWeight: 75
        - pause:
            duration: 1m
