webui-delegate/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui-rollout
spec:
  ports:
  - port: 3030
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: webui-rollout

---

apiVersion: v1
kind: Service
metadata:
  name: webui-experimental-rollout
spec:
  ports:
    - port: 3030
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: webui-rollout
