webui-delegate/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webui-rollout
spec:
  gateways:
  - webui-rollout-gateway
  hosts:
  - "webui-rollout"
  http:
  - name: primary
    route:
    - destination:
        host: webui-rollout
        port:
          number: 3030
        subset: stable  # referenced in canary.trafficRouting.webui.destinationRule.stableSubsetName
      weight: 100
    - destination:
        host: webui-rollout
        port:
          number: 3030
        subset: canary  # referenced in canary.trafficRouting.webui.destinationRule.canarySubsetName
      weight: 0

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webui-rollout-delegate
spec:
  gateways:
    # The name of your Istio Ingress Gateway resource
    - webui-rollout-gateway
  hosts:
    - "localhost"
  http:
  # Rule 1: Match the specific header value 'false' and DELEGATE
  - match:
      - headers:
          # Check if the header 'x-node-experiment' exists and is exactly 'false'
          x-node-experiment:
            exact: "false"
      # Optional: You might add other criteria like URI prefix if needed
      # - uri:
      #     prefix: /
    # If the header matches, delegate routing control to 'webui-rollout' VS
    delegate:
      name: webui-rollout # Name of the VirtualService to delegate to
      namespace: webui-delegate # Namespace where 'webui-rollout' VS exists
  - # No specific match condition needed here, acts as fallback
      # Optional: Add match criteria like URI prefix if needed
      # match:
      # - uri:
      #     prefix: /
      route:
        - destination:
            # Route directly to the experimental Kubernetes Service FQDN
            host: webui-experimental-rollout
